examples/test/testpolicy8746.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8746
  namespace: namespace303
spec:
  podSelector:
    matchLabels:
      key30: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value33
      podSelector:
        matchLabels:
          key24: value26
          key20: value35
          key32: value26
